@@ -6,10 +6,13 @@
  */
 package com.powsybl.openloadflow.ac.outerloop;
 
-import com.powsybl.commons.reporter.Reporter;
+import com.powsybl.commons.report.ReportNode;
 import com.powsybl.openloadflow.ac.AcOuterLoopContext;
 import com.powsybl.openloadflow.lf.outerloop.OuterLoopStatus;
-import com.powsybl.openloadflow.network.*;
+import com.powsybl.openloadflow.network.GeneratorVoltageControl;
+import com.powsybl.openloadflow.network.LfBus;
+import com.powsybl.openloadflow.network.LfNetwork;
+import com.powsybl.openloadflow.network.VoltageControl;
 import com.powsybl.openloadflow.util.PerUnit;
 import com.powsybl.openloadflow.util.Reports;
 import org.apache.commons.lang3.mutable.MutableInt;
@@ -18,7 +21,6 @@ import org.slf4j.LoggerFactory;
 
 import java.util.*;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 /**
  * @author Geoffroy Jamgotchian {@literal <geoffroy.jamgotchian at rte-france.com>}
@@ -107,7 +109,7 @@ public class ReactiveLimitsOuterLoop implements AcOuterLoop {
     }
 
     private boolean switchPvPq(List<ControllerBusToPqBus> pvToPqBuses, int remainingPvBusCount, ContextData contextData,
-                               Reporter reporter) {
+                               ReportNode reportNode) {
         boolean done = false;
 
         int modifiedRemainingPvBusCount = remainingPvBusCount;
@@ -122,6 +124,7 @@ public class ReactiveLimitsOuterLoop implements AcOuterLoop {
             pvToPqBuses.remove(strongestPvToPqBus);
             modifiedRemainingPvBusCount++;
             LOGGER.warn("All PV buses should switch PQ, strongest one '{}' will stay PV", strongestPvToPqBus.controllerBus.getId());
+            Reports.reportBusForcedToBePv(reportNode, strongestPvToPqBus.controllerBus.getId());
         }
 
         if (!pvToPqBuses.isEmpty()) {
@@ -149,7 +152,7 @@ public class ReactiveLimitsOuterLoop implements AcOuterLoop {
             }
         }
 
-        Reports.reportPvToPqBuses(reporter, pvToPqBuses.size(), modifiedRemainingPvBusCount);
+        Reports.reportPvToPqBuses(reportNode, pvToPqBuses.size(), modifiedRemainingPvBusCount);
 
         LOGGER.info("{} buses switched PV -> PQ ({} bus remains PV)", pvToPqBuses.size(), modifiedRemainingPvBusCount);
 
@@ -161,7 +164,7 @@ public class ReactiveLimitsOuterLoop implements AcOuterLoop {
         context.setData(new ContextData());
     }
 
-    private static boolean switchPqPv(List<PqToPvBus> pqToPvBuses, ContextData contextData, Reporter reporter, int maxPqPvSwitch) {
+    private static boolean switchPqPv(List<PqToPvBus> pqToPvBuses, ContextData contextData, ReportNode reportNode, int maxPqPvSwitch) {
         int pqPvSwitchCount = 0;
 
         for (PqToPvBus pqToPvBus : pqToPvBuses) {
@@ -187,7 +190,7 @@ public class ReactiveLimitsOuterLoop implements AcOuterLoop {
             }
         }
 
-        Reports.reportPqToPvBuses(reporter, pqPvSwitchCount, pqToPvBuses.size() - pqPvSwitchCount);
+        Reports.reportPqToPvBuses(reportNode, pqPvSwitchCount, pqToPvBuses.size() - pqPvSwitchCount);
 
         LOGGER.info("{} buses switched PQ -> PV ({} buses blocked PQ because have reach max number of switch)",
                 pqPvSwitchCount, pqToPvBuses.size() - pqPvSwitchCount);
@@ -249,7 +252,7 @@ public class ReactiveLimitsOuterLoop implements AcOuterLoop {
         });
     }
 
-    private static boolean switchReactiveControllerBusPq(List<ControllerBusToPqBus> reactiveControllerBusesToPqBuses, Reporter reporter) {
+    private static boolean switchReactiveControllerBusPq(List<ControllerBusToPqBus> reactiveControllerBusesToPqBuses, ReportNode reportNode) {
         int switchCount = 0;
 
         for (ControllerBusToPqBus bus : reactiveControllerBusesToPqBuses) {
@@ -270,7 +273,7 @@ public class ReactiveLimitsOuterLoop implements AcOuterLoop {
             }
         }
 
-        Reports.reportReactiveControllerBusesToPqBuses(reporter, switchCount);
+        Reports.reportReactiveControllerBusesToPqBuses(reportNode, switchCount);
 
         LOGGER.info("{} remote reactive power controller buses switched PQ", switchCount);
 
@@ -290,11 +293,11 @@ public class ReactiveLimitsOuterLoop implements AcOuterLoop {
                 .filter(LfBus::hasGeneratorReactivePowerControl)
                 .flatMap(bus -> bus.getGeneratorReactivePowerControl().orElseThrow().getControllerBuses().stream())
                 .filter(Predicate.not(LfBus::isDisabled))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public OuterLoopStatus check(AcOuterLoopContext context, Reporter reporter) {
+    public OuterLoopStatus check(AcOuterLoopContext context, ReportNode reportNode) {
         OuterLoopStatus status = OuterLoopStatus.STABLE;
 
         List<ControllerBusToPqBus> pvToPqBuses = new ArrayList<>();
@@ -323,21 +326,25 @@ public class ReactiveLimitsOuterLoop implements AcOuterLoop {
 
         var contextData = (ContextData) context.getData();
 
-        if (!pvToPqBuses.isEmpty() && switchPvPq(pvToPqBuses, remainingPvBusCount.intValue(), contextData, reporter)) {
+        ReportNode iterationReportNode = reportNode;
+        if (!pvToPqBuses.isEmpty() || !pqToPvBuses.isEmpty() || !busesWithUpdatedQLimits.isEmpty() || !reactiveControllerBusesToPqBuses.isEmpty()) {
+            iterationReportNode = Reports.createOuterLoopIterationReporter(reportNode, context.getOuterLoopTotalIterations() + 1);
+        }
+
+        if (!pvToPqBuses.isEmpty() && switchPvPq(pvToPqBuses, remainingPvBusCount.intValue(), contextData, iterationReportNode)) {
             status = OuterLoopStatus.UNSTABLE;
         }
-        if (!pqToPvBuses.isEmpty() && switchPqPv(pqToPvBuses, contextData, reporter, maxPqPvSwitch)) {
+        if (!pqToPvBuses.isEmpty() && switchPqPv(pqToPvBuses, contextData, iterationReportNode, maxPqPvSwitch)) {
             status = OuterLoopStatus.UNSTABLE;
         }
         if (!busesWithUpdatedQLimits.isEmpty()) {
-            LOGGER.info("{} buses blocked to a reactive limit have been adjusted because reactive limit has changed",
-                    busesWithUpdatedQLimits.size());
+            LOGGER.info("{} buses blocked at a reactive limit have been adjusted because the reactive limit changed", busesWithUpdatedQLimits.size());
+            Reports.reportBusesWithUpdatedQLimits(iterationReportNode, busesWithUpdatedQLimits.size());
             status = OuterLoopStatus.UNSTABLE;
         }
-        if (!reactiveControllerBusesToPqBuses.isEmpty() && switchReactiveControllerBusPq(reactiveControllerBusesToPqBuses, reporter)) {
+        if (!reactiveControllerBusesToPqBuses.isEmpty() && switchReactiveControllerBusPq(reactiveControllerBusesToPqBuses, iterationReportNode)) {
             status = OuterLoopStatus.UNSTABLE;
         }
-
         return status;
     }
 }
